# toon-py

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/pytoon/: encoder.py  types.py
src/toon_py/: __init__.py  cli.py  quoting.py
tests/: test_benchmarks.py  test_encoder.py  test_quoting.py
