[project]
name = "toon-py"
version = "0.1.0"
description = "Token-Oriented Object Notation: A compact format for passing structured data to LLMs with 30-60% fewer tokens than JSON"
readme = "README.md"
authors = [
    { name = "Shammi Anand", email = "shammianand101@gmail.com" }
]
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "tokens", "json", "serialization", "ai", "prompt-engineering", "toon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
toon = "toon_py.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toon_py"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [".venv"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
